oop_mro/tests/trybuild/fail_const_async.stderr
error: const async methods are not supported
 --> tests/trybuild/fail_const_async.rs:5:9
  |
5 |         const async fn load(&self) -> usize {
  |         ^^^^^
