oop_mro/tests/trybuild/fail_const_async.rs
use oop_mro::prelude::*;

oop_class! {
    class Service {
        const async fn load(&self) -> usize {
            1
        }
    }
}

fn main() {}
